--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
   </head>
 
-  <body>  
+  <body class="pink" >  
     <div class="container">
       <img class="avatar"
       src="https://github.com/eliane-sp-silva.png" alt="Image da Eliane" />
