incluido dark mode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <body class="pink" >  
     <div class="container">
+      <div class="toggle">
+        <input id="switch" type="checkbox" name="theme">
+        <label for="switch">Toggle</label>
+    </div>
       <img class="avatar"
       src="https://github.com/eliane-sp-silva.png" alt="Image da Eliane" />
       <h1>Eliane SP Silva</h1>
@@ -40,5 +44,8 @@
       <footer>Feito com 💜 pela <a href="#" target="_blank"> Rocketseat & Eliane SP Silva</a></footer>
       
     </div>
+
+    <script src="scripts.js"></script>
+
   </body>
 </html>
