incluido link da pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RocketLinks</title>
+    <title>RocketLinksByElianeSPSilva</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
   </head>
@@ -41,7 +41,7 @@
           target="_blank">🐱 Github</a>
         </li>
       </ul>
-      <footer>Feito com 💜 pela <a href="#" target="_blank"> Rocketseat & Eliane SP Silva</a></footer>
+      <footer>Feito com 💜 pela <a href="https://eliane-sp-silva.github.io/maratona-explorer2-rocketseat/" target="_blank"> Rocketseat & Eliane SP Silva</a></footer>
       
     </div>
 
